# traces-to-evals

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/traceeval-contracts/: Cargo.toml
crates/traceeval-contracts/src/: compact_task_completion.rs  context.rs  evaluation.rs  lib.rs  task_completion_training.rs
docs/: api-and-product-roadmap.md  cluster-discovery.md  missing.md  scoring-design.md  task-completion-training-records.md  vector-index.md
fixtures/behavior/: adapter.json  traces.jsonl
fixtures/eval/: cases.jsonl  clusters.jsonl  historical_results.jsonl  human_ratings.jsonl  new_results.jsonl
fixtures/learned/: agent_context_release.json  agent_taxonomy_release.json  evaluator_release_prompt_judge.json  expected_ids.json
fixtures/openinference/: traces.jsonl
src/: calibration.rs  cli.rs  clustering.rs  comparison.rs  error.rs  evaluation.rs  exporters.rs  graders.rs  lib.rs  model.rs  project.rs  report.rs  scoring.rs  semantic.rs  validation.rs
src/behavior/: adapter.rs  candidate.rs  detection_report.rs  detectors.rs  evidence.rs  grouping.rs  input.rs  mod.rs  model.rs  normalizer.rs  presentation.rs  projection.rs  recurrence.rs  runner.rs  semantic.rs  verification.rs
src/behavior/candidate/: expectations.rs
src/behavior/detectors/: policy.rs  recovery.rs  support.rs  tests.rs
src/behavior/normalizer/: attributes.rs  outcome.rs  tests.rs  tool.rs
src/behavior/recurrence/: tests.rs
src/behavior/semantic/: detection.rs  model.rs  openai.rs  projection.rs  tests.rs
src/behavior/verification/: finding.rs  model.rs  pairing.rs  tests.rs
src/cli/: cluster.rs  tests.rs
src/clustering/: assignment.rs  discovery.rs  embedding.rs  labeling.rs  openai.rs  quality.rs  vector_index.rs
src/clustering/assignment/: tests.rs
src/clustering/discovery/: assigner.rs  distance.rs  kmeans.rs  model.rs  options.rs  tests.rs
src/clustering/vector_index/: assigner.rs  brute_force.rs  paimon.rs  records.rs  row_map.rs  tests.rs
src/commands/: calibrate.rs  cluster.rs  compare_recurrence.rs  detect.rs  extract.rs  grade.rs  judge.rs  mod.rs  report.rs  validate.rs  verify_findings.rs  verify_remediation.rs
src/commands/cluster/: index.rs
src/export/: mod.rs  openai.rs  promptfoo.rs
src/extractors/: mod.rs  openinference.rs  simple.rs
src/io/: csv.rs  json.rs  jsonl.rs  mod.rs
src/judge/: mod.rs  openai.rs  openai_dive_judge.rs  prompt.rs  types.rs
src/learned/: agreement.rs  calibration.rs  canonical.rs  compact_projector.rs  compact_task_completion.rs  context.rs  evaluator.rs  mod.rs  provider.rs  task_completion.rs  task_completion_training.rs  taxonomy.rs  tests.rs
src/providers/: chat.rs  mod.rs
src/providers/openai_dive/: chat.rs  client.rs
src/validation/: builder.rs  report.rs  scalars.rs
tests/: api_shape.rs  behavior_cli_workflow.rs  cli_workflow.rs  learned_contracts.rs  metadata_assignment_cli.rs  vector_index_cli.rs
