[package]
name = "traces-to-evals"
version = "0.1.0"
edition = "2024"

[lib]
name = "traces_to_evals"
path = "src/lib.rs"

[[bin]]
name = "traceeval"
path = "src/bin/traceeval.rs"

[features]
default = []
llm-judge-openai = ["openai_dive", "async-trait", "tokio"]

[dependencies]
anyhow = "1"
async-trait = { version = "0.1", optional = true }
csv = "1"
openai_dive = { version = "1.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
