[package]
name = "traces-to-evals"
version = "0.1.0"
edition = "2024"

[lib]
name = "traces_to_evals"
path = "src/lib.rs"

[[bin]]
name = "traceeval"
path = "src/bin/traceeval.rs"

[features]
default = []
cluster-label-openai = ["openai_dive", "schemars", "tokio"]
embeddings-openai = ["openai_dive", "tokio"]
llm-judge-openai = ["openai_dive", "schemars", "tokio"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
csv = "1"
openai_dive = { version = "1.4", optional = true }
schemars = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[dev-dependencies]
tempfile = "3"
