[package]
name = "traces-to-evals"
version = "0.1.0"
edition = "2024"

[lib]
name = "traces_to_evals"
path = "src/lib.rs"

[[bin]]
name = "traceeval"
path = "src/bin/traceeval.rs"

[features]
default = []
cluster-label-openai = ["openai_dive", "schemars", "tokio"]
clustering-linfa = ["linfa", "linfa-clustering", "ndarray", "rand"]
embeddings-openai = ["openai_dive", "tokio"]
llm-judge-openai = ["openai_dive", "schemars", "tokio"]
ann-paimon = ["paimon-vindex-core", "roaring"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
csv = "1"
linfa = { version = "0.8", optional = true }
linfa-clustering = { version = "0.8", optional = true }
ndarray = { version = "0.16", optional = true }
openai_dive = { version = "1.4", optional = true }
paimon-vindex-core = { git = "https://github.com/apache/paimon-vector-index", rev = "93753f7dc8fea0402f7a5c8ee9f080168b553219", package = "paimon-vindex-core", optional = true }
rand = { version = "0.8", features = ["small_rng"], optional = true }
roaring = { version = "0.11", optional = true }
schemars = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[dev-dependencies]
tempfile = "3"
