[package]
name = "traceeval-contracts"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Portable, versioned trace evaluation contracts"
repository = "https://github.com/Etolith/traces-to-evals"
license = "GPL-3.0-or-later"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10"
thiserror = "2"
